@@ -12,5 +12,7 @@
     <file>bt_left_all.png</file>
     <file>satellite_hint.png</file>
     <file>satellites.json</file>
+    <file>normalStyle.css</file>
+    <file>nightStyle.css</file>
   </qresource>
 </RCC>
