@@ -167,6 +167,42 @@ void Satellites::init()
 
 	// Handle changes to the observer location:
 	connect(StelApp::getInstance().getCore()->getNavigator(), SIGNAL(locationChanged(StelLocation)), this, SLOT(observerLocationChanged(StelLocation)));
+	
+	//Load the module's custom style sheets
+	const StelStyle * style = StelApp::getInstance().getCurrentStelStyle();
+	normalStyle = new StelStyle(*style);
+	nightStyle = new StelStyle(*style);
+	QFile styleSheetFile;
+	styleSheetFile.setFileName(":/satellites/normalStyle.css");
+	if(styleSheetFile.open(QFile::ReadOnly|QFile::Text))
+	{
+		normalStyle->qtStyleSheet.append(styleSheetFile.readAll());
+	}
+	styleSheetFile.close();
+	styleSheetFile.setFileName(":/satellites/nightStyle.css");
+	if(styleSheetFile.open(QFile::ReadOnly|QFile::Text))
+	{
+		nightStyle->qtStyleSheet.append(styleSheetFile.readAll());
+	}
+	styleSheetFile.close();
+	Satellites::setStelStyle(*StelApp::getInstance().getCurrentStelStyle());
+}
+
+void Satellites::setStelStyle(const StelStyle& style)
+{
+	if (style.confSectionName == "color")
+	{
+		configDialog->setStelStyle(*normalStyle);
+	}
+	else
+	{
+		configDialog->setStelStyle(*nightStyle);
+	}
+}
+
+const StelStyle & Satellites::getModuleStyleSheet(const QString& styleModeName)
+{
+	return ((styleModeName == "color") ? (*normalStyle) : (*nightStyle));
 }
 
 double Satellites::getCallOrder(StelModuleActionName actionName) const
