@@ -1,3 +1,5 @@
+Added custom style sheets.
+
 0.5.2 [2010-01-12]
 
 Fix sub-pixel dialog position.
